rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/name/dot_code_as_class_name.rns
.class public  .code
.super java/lang/Object
